Fix top level menu overlap

--- a/kitsune/sumo/static/sumo/scss/layout/_nav.scss
+++ b/kitsune/sumo/static/sumo/scss/layout/_nav.scss
@@ -332,7 +332,7 @@
   }
 
   .mzp-c-menu-panel {
-    top: 74px;
+    top: 100%;
   }
 }
 
